# MyLittleBlog

./: README.md  pyproject.toml
tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
veras_on_dev/: __init__.py  auth.py  blog.py  db.py  schema.sql
veras_on_dev/static/: style.css
veras_on_dev/templates/: base.html
veras_on_dev/templates/auth/: login.html  register.html
veras_on_dev/templates/blog/: create.html  index.html  update.html
