[project]
name = "veras_on_dev"
version = "1.0.0"
description = "The basic blog app built in the Flask tutorial."
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_option]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["veras_on_dev"]